fixed: Enable brand logo for light and dark mode, with default mode option (#583)
* fixed: Enable brand logo for light and dark mode, with default mode option

* fixed the segment color

--- a/src/components/PreviewCode/PreviewSite.module.scss
+++ b/src/components/PreviewCode/PreviewSite.module.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
 
   .site__preview__titlebar {
-    width: calc(100vw - 360px);
+    width: calc(100vw - 400px);
     padding: 0px 10px;
     height: 30px;
     background-color: var(--bg-primary);
