--- a/src/components/SiteBuilder/sections/Hero/HeroForm.module.scss
+++ b/src/components/SiteBuilder/sections/Hero/HeroForm.module.scss
@@ -15,3 +15,17 @@
     }
   }
 }
+
+.segment {
+  color: var(--font-secondary);
+  .segment__labels {
+    line-height: 0;
+    padding: 5px 0px;
+
+    > div {
+      padding: 0px 17px;
+      line-height: 0;
+      min-height: 0;
+    }
+  }
+}
